fixed quote privacy alignment

--- a/style.css
+++ b/style.css
@@ -2358,7 +2358,9 @@ img.aligncenter.wp-image-276.size-full {
 	margin-bottom: 3px;
 }
 
-
+.page-id-229 .privacy  {
+	margin-top: 88px;
+}
 
 /* Media Queries
 ---------------------------------------------------------------------------------------------------- */
